Prevent overlap of sidebar column with everything else
The .articleplaceholder-sidebar is floated to the left. This is what we
want. However, if the .articleplaceholder-identifierlist does not
contain many items then statement-groups can appear under it. This
creates a slightly off-topic look to the page. This commit should
prevent this by setting the statement-group list to `width: auto` and
`overflow: hidden`, as per https://stackoverflow.com/a/5195902/5013691.

Note that this must happen only when the viewport is at least 912px
wide, or the statement-groups will be partially cut off due to their
fixed size.

Bug: T149193

--- a/modules/ext.articleplaceholder.defaultDisplay/ext.articleplaceholder.defaultDisplay.css
+++ b/modules/ext.articleplaceholder.defaultDisplay/ext.articleplaceholder.defaultDisplay.css
@@ -54,6 +54,23 @@
 	margin-top: 1.5em;
 }
 
+/*
+ * At screen widths between 982px and 880px, statementgroups's right edges
+ * are 911px from the left side of the screen (including the 1px border).
+ * However, the sidebar's float is only set to `none` at 880px, resulting in
+ * the right side of the statementgroups being cut off if we apply
+ * `overflow: hidden` to the statementgrouplist. However, we need
+ * `overflow: hidden` in order to prevent statementgroups from appearing under
+ * the sidebar. To work around this, we only apply `overflow: hidden` at screen
+ * sizes at least 912px wide (with 1 extra pixel for breathing room).
+ */
+@media screen and ( min-width: 912px ) {
+	.articleplaceholder-statementgrouplist {
+		width: auto;
+		overflow: hidden;
+	}
+}
+
 .articleplaceholder-qualifier {
 	margin-left: 1em;
 }
